# event-loop

./: .clang-format  .gitignore  CMakeLists.txt  epoll.cpp  epoll.h  epoll_notificator.cpp  epoll_notificator.h  event_loop.cpp  event_loop.h  event_loop_context.cpp  event_loop_context.h  event_notificator_interface.h  main.cpp  task.cpp  task.h
example/: CMakeLists.txt  main.cpp  simple.cpp  tcp_echo_server.cpp  tcp_printer.cpp
include/oxm/: event.h  event_loop.h  executor.h  task.h
include/oxm/internal/: fast_pimpl.h
src/: CMakeLists.txt  epoll_notificator.cpp  epoll_notificator.h  event_loop.cpp  event_loop_context.cpp  event_loop_context.h  event_notificator_interface.h  registry.cpp  registry.h  task.h  task_allocator.h
src/core/: lock_free_queue.h  simd_algorithm.cpp  simd_algorithm.h
src/io/: base_notificator.h  notificator.h
src/io/linux/: epoll_notificator.cpp  epoll_notificator.h
src/memory/: aligned_allocator.h  allocator_interface.h  base_allocator.h  buddy_allocator.cpp  buddy_allocator.h  dummy_allocator.cpp  dummy_allocator.h
src/multithreading/: async_mutex.h  task_executor.cpp  task_executor.h
test/: CMakeLists.txt  buddy_allocator_test.cpp  catch2.hpp  event_loop_test.cpp  event_test.cpp  executor_test.cpp  lock_free_queue_test.cpp  registry_test.cpp
